syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

import "google/protobuf/empty.proto";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message OrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
  string created_at = 5;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc ListOrders(google.protobuf.Empty) returns (ListOrdersResponse);
}
